# BabbageVM

./: .gitignore  CMakeLists.txt  Makefile  alu.cpp  alu.hpp  assembler.cpp  assembler.hpp  bitmap.cpp  bitmap.hpp  cpu.cpp  cpu.hpp  imgui.ini  instr.txt  main.cpp  memory.cpp  memory.hpp  regfile.hpp  register.hpp  test.txt  ui.cpp  utils.hpp  vm_types.hpp
assembler/: assembler.cpp  assembler.hpp
linker/: linker.cpp  linker.hpp  linkerutils.cpp  linkerutils.hpp
loader/: loader.cpp  loader.hpp
macro/: macro.cpp  macro.hpp  main.cpp
ui/: ui.cpp  ui.hpp
utils/: utils.cpp  utils.hpp
vm/: CMakeLists.txt  Makefile  README.md  bitmap.cpp  bitmap.hpp  cpu.cpp  cpu.hpp  instr.txt  instructions.txt  main.cpp  memory.hpp  register.hpp  vm_utils.hpp
